fix the mobile nav width and spacing

--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -48,7 +48,7 @@
 
     &.active {
       @include mq.tablet {
-        width: 50%;
+        width: 65%;
       }
     }
   }
@@ -59,7 +59,7 @@
     @include mq.tablet {
       flex-direction: column;
       width: 100%;
-      padding: 30px 5% 0;
+      padding: 30px 10% 0;
       gap: 40px 0;
       opacity: 0;
       transition: 0.3s ease;
